--- a/notebooks/district_37.qmd
+++ b/notebooks/district_37.qmd
@@ -251,19 +251,23 @@ The two candidates with viable shots to win were Darma Diaz and Sandy Nurse. Dia
 
 Prior to her political career Diaz worked for OverComing Love Ministry which seeks to find housing and employment for homeless East New Yorkers. She was also a founding member of Coalition for Community Advancement, a community group which sought to negotiate the removal of Arlington Village from the East New York rezoning. Arlington Village is a large, mainly vacant housing unit the city had hoped to include in its mixed use rezoning of the area. Diaz and her group worried about looming real estate speculation should the large property be included in the plan, and successfully sought its removal. Apart from these associations Diaz had no outstanding political associations and is difficult to place on an ideological spectrum. She is an older type of council member, whose career on the body is primarily due to her in-district relationships, primarily with the County party. She did not raise exorbitant sums of city-wide money or take bold stands on national or international issues, like members of the group under analysis here.
 
-Not so with Nurse, who is a long time veteran of progressive politics. She is comfortable with the label progressive because she thinks it quickly communicates a lot of information to a large number of voters, but she also refers to herself as a leftist and cited her colleagues in the DSA as her closest ideological allies [@nurse2025]. Nurse spent her early career working with NGOs, but her disillusionment with what she say as establishment politics led her to Occupy Wall Street where she played an important role as an organizer and leader[@lange2023]. After Occupy she continued her activism, founding BK ROT, a composting service, and Mayday Space, a location for activists and organizers. She was also a leader in the 2020 sit-in outside City Hall for a no vote on the budget due to its continued high rate of NYPD funding [@lange2023]. Nurse is of the new breed of Coucnil members. When she discusses political issues there is careful attention paid to how they affect her constituents as well as an eye towards what they mean in the larger scope of city-wide and national politics. She often framed responses to questions in terms reminiscent of the discussion of Stone, Molleknkopf, and Fortner in Chapter 1, thinking through the intersection of race in class in ways that frame urban power. Nurse added that there are some areas of the city in which the council member can be ideoligically and rhetorically quite far to the left, and have that be enough to win them support, and others where all that is important is getting the garbage picked up and securing money for local projects. She framed her district as a hybrid of the two. 
+Not so with Nurse, who is a long time veteran of progressive politics. She is comfortable with the label progressive because she thinks it quickly communicates a lot of information to a large number of voters, but she also refers to herself as a leftist and cited her colleagues in the DSA as her closest ideological allies [@nurse2025]. Nurse spent her early career working with NGOs, but her disillusionment with what she say as establishment politics led her to Occupy Wall Street where she played an important role as an organizer and leader[@lange2023]. After Occupy she continued her activism, founding BK ROT, a composting service, and Mayday Space, a location for activists and organizers. She was also a leader in the 2020 sit-in outside City Hall for a no vote on the budget due to its continued high rate of NYPD funding [@lange2023]. Nurse is of the new breed of Coucnil members. When she discusses political issues there is careful attention paid to how they affect her constituents as well as an eye towards what they mean in the larger scope of city-wide and national politics. She often framed responses to questions in terms reminiscent of the discussion of Stone, Molleknkopf, and Fortner in Chapter 1, thinking through the intersection of race in class in ways that frame urban power. Nurse added that there are some areas of the city in which the council member can be ideoligically and rhetorically quite far to the left, and have that be enough to win them support, and others where all that is important is getting the garbage picked up and securing money for local projects. She framed her district as a hybrid of the two.
 
-The two were opposed, then, on two primary axes. First, the loudest and most contentious division, was their insider and outsider status. Diaz was the clear choice of the Kings County Dems, who threw their weight behind her in both 2020 and in 2021, having worked to get Nurse tossed off the ballot. Nurse saw this as corruption and clearly said so, as well as tweeting about other ways in which the county party was over-extending its reach, such as in the attempted dissolution of its youth branch [@alarge2021; @itconti2021]. Diaz also got the support of Hakeem Jeffries, Brooklyn's chief antagonist to progressives [@councilw2021]. The other axes was the style of council member each sought to be. Diaz emphasized her roots in the district, her personal experience, and her year spent getting money for the district. There was not much in the way of an identifiable partisan agenda. In a debate hosted by PoliticsNY Diaz referred every answer back to a particular experience she had in her district, such as a lot she helped turn into a gardner, or a course she took at the local police precinct. It was clear from the campaign trail that nurse wanted to be a different style of councilwoman, grounded in the district but vocal about left-wing issues at the city and national level.
+The two were opposed, then, on two paxes. First, the loudest and most contentious division, was their insider and outsider status. Diaz was the clear choice of the Kings County Dems, who threw their weight behind her in both 2020 and in 2021, having worked to get Nurse tossed off the ballot. Nurse saw this as corruption and clearly said so, as well as tweeting about other ways in which the county party was over-extending its reach, such as in the attempted dissolution of its youth branch [@alarge2021; @itconti2021]. Diaz also got the support of Hakeem Jeffries, Brooklyn's chief antagonist to progressives [@councilw2021]. The other axes was the style of council member each sought to be. Diaz emphasized her roots in the district, her personal experience, and her year spent getting money for the district. There was not much in the way of an identifiable partisan agenda. In a debate hosted by PoliticsNY Diaz referred every answer back to a particular experience she had in her district, such as a lot she helped turn into a gardner, or a course she took at the local police precinct. It was clear from the campaign trail that nurse wanted to be a different style of councilwoman, grounded in the district but vocal about left-wing issues at the city and national level.
 
 ## The Campaign
 
 The primary divide on the campaign trail was about Diaz's relationship with the County democratic party, as already mentioned. Diaz, who had gloated about her opponents being removed a year previously, had to play the defensive to avoid accusations of corruption [@coltin2020]. In PoliticsNY's candidate debate Nurse goes on the defensive against accusations of inept governance by the left, but the accusations came from another opponent, not from Diaz. During the debate Diaz seems at a loss on some principle issues and only capable of commanding the conversation when she is discussing places in her district or initiatives that she was on on the council. When discussing police violence, for example, most candidates discussed crime rates, police abuses, or defunding, Diaz chose to speak about a citizens policing course she had taken decades previously.
 
-Aside from the machine corruption allegations the most contentious issues of the campaign was over race. Nurse, born in Panama to a Panamanian mother and African-American father, referred to herself as Afro-Latina. Diaz objected to this categorization, suggesting that Nurse was changing her race to meet the political demands of the moment. Nurse, as well as others in the district, were outraged and took to Twitter and the press to register complaint. This incident was perhaps just a cynical attempt on the part of Diaz to frame her opponent as an opportunist, but it also belies a fundemental schism between the two. Nurse spoke about identity in the laguage of the contemporary left, Diaz did not. 
+Aside from the machine corruption allegations the most contentious issues of the campaign was over race. Nurse, born in Panama to a Panamanian mother and African-American father, referred to herself as Afro-Latina. Diaz objected to this categorization, suggesting that Nurse was changing her race to meet the political demands of the moment. Nurse, as well as others in the district, were outraged and took to Twitter and the press to register complaint. This incident was perhaps just a cynical attempt on the part of Diaz to frame her opponent as an opportunist, but it also belies a fundamental schism between the two. Nurse spoke about identity in the language of the contemporary left, Diaz did not.
 
-Nurse far outraised Diaz in campaign contributions, raising $80,385 private funds, in part from 1,028 individual donations with an average size of $68. Diaz raised $46,671 with 347 individual donations with an average size of $134. Despite lacking in direction contributions, Diaz had tens of thousands of dollars behind her in Indepent Expenditure spending. Her biggest two backers were Voters of NYC, Inc. and A Better New York for All. Voters of NYC, Inc. is funded primarily by real estate interests, including  WLZ (William L. Zeckendorf) Properties, Rosewood Realty Group and Silverstein Properties, the fifth largest commercial landlord in the city. Both Silverstein and Rosewoods are currenlty involved in projects in the district worht a combined $186 million. A Better New York for All is also funded primarily by real estate interests, its largest contributor was Peter Fine of the Atlantic Development Corp, which had a direct interest in the 37th, and other large Brooklyn based real estate firms. The ads these IEs ran for Darma had primarily to do with "quality of life." One flier refers to her as "quality of life approved", with no explanation of what that means. The election day telephone script paid for by X promises that Darma will "keep our streets safe."
+Nurse far out-raised Diaz in campaign contributions, raising \$80,385 private funds, in part from 1,028 individual donations with an average size of \$68. Diaz raised \$46,671 with 347 individual donations with an average size of \$134. Nurse's high amount of low-dollar donations make her fundraising more akin to DSA candidates.
 
-Nurse's IE support came from labor groups, primarily Labor Strong. 
+Despite lacking in direction contributions, Diaz had slightly over \$175,000 behind her in Independent Expenditures, roughly doubling Nurse's numbers in the same category. Her biggest two backers were Voters of NYC, Inc. who contributed \$125,775 and A Better New York for All who contributed \$52,198. This was by far Voters of NYC's largest contribution of the '21 cycle, more than doubling their second largest contribution, and the fifth largest contribution of any IE to any candidate in the election. A Better New York for All's contribution was also their largest spending in the City Coucnil races. These two contributions made Diaz the ninth highest recipient of IE funds in the campaign.
+
+Voters of NYC, Inc. is funded primarily by real estate interests, including WLZ (William L. Zeckendorf) Properties, Rosewood Realty Group and Silverstein Properties, the fifth largest commercial landlord in the city. Both Silverstein and Rosewoods are currently involved in projects in the district worth a combined \$186 million. A Better New York for All is also funded primarily by real estate interests, its largest contributor was Peter Fine of the Atlantic Development Corp, which had a direct interest in the 37th, and other large Brooklyn based real estate firms. Leanord Lauder, heir to Estee Lauder, was also a major contributor, he and his brother were major spenders against progressive council members throughout the city. The ads these IEs ran for Darma had primarily to do with quality of life issues very broadly stated. Both a flier and a truck billboard refers to her as the "quality of life-approved-candidate" with a green check mark, obviously hinting at some sort of ranking or certification, with no explanation of what that means. The election day text script paid for by Voters of NYC promises that Darma will "make sure that our streets are safe." The most expensive flier features the green check along with a promise of a "real plan for quality of life."
+
+Nurse's IE support was broken into smaller groups than Diaz's big two groups, but her biggest two contributors were Labor Strong, the largest public sector union PAC, who contributed \$62,898 and Road to Justice, whose biggest contributors were public sector unions and Make the Road Action, who contributed \$26,852. Labor Strong's fliers for Nurse were the standard fliers they produced for all their supported candidates, promising support for union jobs. Road to Justice fliers promise "truly affordable housing" and "policies that stop criminalizing Black and brown people and invest in communities." A call script also paid for by Road to Justice highlights her progressive stances on housing, climate, and immigration, the latter mentioning her dedication to opposing ICE.
 
 ## The Election
 
@@ -361,8 +365,8 @@ plt.tight_layout()
 plt.show()
 ```
 
-Nurse's win was decicive. She won an enormous victory with the standard progressive base in the West of her district, and was the only member in the dissertation to have a positive, significant coefficent with black voters. 
+Nurse's win was decicive. She won an enormous victory with the standard progressive base in the West of her district, and was the only member in the dissertation to have a positive, significant coefficent with black voters.
 
-## Conclusion 
+## Conclusion
 
-Sandy Nurse faced significant obstacles to election in the 37th. She was running against an incumbemt with the explicit support of the county democratic party with significant advertising funding from multiple IEs. While the Northeast cornere of her district was demographically set for a progressive win, the rest was not. 
+Sandy Nurse faced significant obstacles to election in the 37th. She was running against an incumbemt with the explicit support of the county democratic party with significant advertising funding from multiple IEs. While the Northeast cornere of her district was demographically set for a progressive win, the rest was not.
